[project]
name = "pytorch-cuda-env"
version = "0.1.0"
description = "PyTorch with CUDA support on Windows"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "torch==2.12.0+cu132",
    "torchvision==0.27.0+cu132",
    "tqdm>=4.66.5",
]

[tool.uv]
index-url = "https://download.pytorch.org/whl/cu132"
index-strategy = "unsafe-best-match"
